@@ -1,1 +1,1 @@
-COMMONSRC = ../src/ChooserDialog.cpp ../src/KKEditClass.cpp ../src/KKEditClassCallbacks.cpp ../src/KKEditClassDocuments.cpp ../src/KKEditClassFiles.cpp ../src/KKEditClassGUIs.cpp ../src/KKEditClassMenus.cpp ../src/KKEditClassSearch.cpp ../src/KKEditClassTools.cpp ../src/LFSTKFindClass.cpp ../src/LFSTKUtilityClass.cpp ../src/QT_AboutBox.cpp ../src/QT_document.cpp ../src/QT_highlighter.cpp ../src/QT_historyClass.cpp ../src/QT_menuitem.cpp ../src/QT_notebook.cpp ../src/QT_recentMenu.cpp ../src/QT_themeClass.cpp ../src/QT_toolbar.cpp ../src/SingleInstanceClass.cpp ../src/main.cpp
+COMMONSRC = ../src/ChooserDialog.cpp ../src/KKEditClass.cpp ../src/KKEditClassCallbacks.cpp ../src/KKEditClassDocuments.cpp ../src/KKEditClassFiles.cpp ../src/KKEditClassGUIs.cpp ../src/KKEditClassMenus.cpp ../src/KKEditClassSearch.cpp ../src/KKEditClassTools.cpp ../src/LFSTKFindClass.cpp ../src/LFSTKUtilityClass.cpp ../src/QT_AboutBox.cpp ../src/QT_ProxyStyle.cpp ../src/QT_document.cpp ../src/QT_highlighter.cpp ../src/QT_historyClass.cpp ../src/QT_menuitem.cpp ../src/QT_notebook.cpp ../src/QT_recentMenu.cpp ../src/QT_themeClass.cpp ../src/QT_toolbar.cpp ../src/SingleInstanceClass.cpp ../src/main.cpp
