@@ -45,12 +45,11 @@ enum {ABOUTMENUITEM=0xe000,ABOUTQTMENUITEM,HELPMENUITEM};
 
 enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,SYNTAXHILITE,USESINGLE,AUTOSAVE,NODUPLICATE,NOWARN,AUTOSHOW,BEKIND,MAXPREFSWIDGETS};
 enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXRECENTS,MSGCHECKTIME,MAXPREFSINTWIDGETS};
-enum {FUNCTIONCOMBO=0,THEMECOMBO,FONTNAMECOMBO,PREFSTERMCOMMAND,PREFSPRINTCOMMAND,PREFSROOTCOMMAND,PREFSCURRENTFONT,BMHIGHLIGHTCOLOUR,CURRENTLINECOLOUR,SHORTCUTSCOMBO,PREFSMENUSTYLE,MAXPREFSOTHERWIDGETS};
+enum {FUNCTIONCOMBO=0,THEMECOMBO,FONTNAMECOMBO,PREFSTERMCOMMAND,PREFSPRINTCOMMAND,PREFSROOTCOMMAND,PREFSCURRENTFONT,BMHIGHLIGHTCOLOUR,CURRENTLINECOLOUR,SHORTCUTSCOMBO,MAXPREFSOTHERWIDGETS};
 
 enum {FINDNEXT=1,FINDPREV,FINDREPLACE};
 
-//od enums
-//enum {SPELLCHECKMENUITEM=0x2000,APPLYWORDBUTTON,IGNOREWORDBUTTON,ADDWORDBUTTON,CANCELSPELLCHECK,CANCELPREFS,DOLINEBOX,DOLIVESEARCH,DOAPISEARCH,DOQT5SEARCH,DOGTKSEARCH,DOCVIEWERGOHOME,TOOLSSAVE,TOOLSCANCEL,TOOLSDELETE,TOOLSSAVEAS,TOOLSEDIT};
+//odd enums
 enum {SPELLCHECKMENUITEM=0x2000,APPLYWORDBUTTON,IGNOREWORDBUTTON,ADDWORDBUTTON,CANCELSPELLCHECK,CANCELPREFS,DOLINEBOX,DOLIVESEARCH,DOAPISEARCH,DOCVIEWERGOHOME,TOOLSSAVE,TOOLSCANCEL,TOOLSDELETE,TOOLSSAVEAS,TOOLSEDIT};
 
 struct tabMenuStruct
@@ -70,6 +69,7 @@ enum {HIDETABSHORTCUT=0,DELETELINESHORTCUT,DELETETOEOLSHORTCUT,DELETETOSOLSHORTC
 
 enum {FRCASE=0,FRUSEREGEX,FRREPLACEFIND,FRWRAP,FRALLFILES,FRHIGHLIGHTALL,FRREPLACEALL,FRSEARCHBACK,FRMAXSWITCHES};
 
+class ProxyStyle;
 class ThemeClass;
 class DocumentClass;
 class TabColours;
@@ -82,6 +82,7 @@ class kkEditQTPluginInterface;
 
 #include "kkedit-includes.h"
 
+#include "QT_ProxyStyle.h"
 #include "ChooserDialog.h"
 #include "QT_themeClass.h"
 #include "QT_AboutBox.h"
@@ -287,6 +288,7 @@ class KKEditClass : public QObject
 		QString						prefStyleName;
 		QString						prefStyleNameHold;
 		ThemeClass					*theme=NULL;
+		ProxyStyle					*mainThemeProxy=NULL;
 
 //editor
 		int							prefsFunctionMenuLayout=0;
@@ -305,7 +307,6 @@ class KKEditClass : public QObject
 		bool							prefsUseSingle=true;
 		bool							prefsNagScreen=false;
 		bool							onExitSaveSession=false;
-		QString						prefsMenuStyleString;
 
 //editor vars
 		QStatusBar					*statusBar;
@@ -418,8 +419,6 @@ class KKEditClass : public QObject
 //toolbar vars
 		ToolBarClass					*toolBar=NULL;
 		QLineEdit					*lineNumberWidget=NULL;
-		//QLineEdit					*findGtkApiWidget=NULL;
-		//QLineEdit					*findQtApiWidget=NULL;
 		QLineEdit					*findDefWidget=NULL;
 		QLineEdit					*liveSearchWidget=NULL;
 //toolbar functions
